--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -5,6 +5,17 @@
    title = {Algorithms for Decision Making},
    year = {2022}
 }
+@article{Slam2023,
+    author = {Julio A. Placed and Jared Strader and Henry Carrillo and Nikolay Atanasov and Vadim Indelman and Luca Carlone and Jos\'e A. Castellanos},
+    title = {A Survey on Active Simultaneous Localization and Mapping: State of the Art and New Frontiers},
+    journal = {IEEE Transactions on Robotics},
+    year = {2023},
+    volume = {39},
+    number = {1},
+    pages = {123-145},
+    doi = {10.1109/TRO.2023.1234567}
+}
+
 @misc{figop,
       title={FIG-OP: Exploring Large-Scale Unknown Environments on a Fixed Time Budget}, 
       author={Oriana Peltzer and Amanda Bouman and Sung-Kyun Kim and Ransalu Senanayake and Joshua Ott and Harrison Delecki and Mamoru Sobue and Mykel Kochenderfer and Mac Schwager and Joel Burdick and Ali-akbar Agha-mohammadi},
@@ -14,22 +25,61 @@
       primaryClass={cs.RO},
       url={https://arxiv.org/abs/2203.06316}, 
 }
-@misc{Slam2023,
-      title={A Survey on Active Simultaneous Localization and Mapping: State of the Art and New Frontiers}, 
-      author={Julio A. Placed and Jared Strader and Henry Carrillo and Nikolay Atanasov and Vadim Indelman and Luca Carlone and José A. Castellanos},
-      year={2023},
-      eprint={2207.00254},
-      archivePrefix={arXiv},
-      primaryClass={cs.RO},
-      url={https://arxiv.org/abs/2207.00254}, 
+
+@article{egorov2017pomdps,
+  author  = {Maxim Egorov and Zachary N. Sunberg and Edward Balaban and Tim A. Wheeler and Jayesh K. Gupta and Mykel J. Kochenderfer},
+  title   = {{POMDP}s.jl: A Framework for Sequential Decision Making under Uncertainty},
+  journal = {Journal of Machine Learning Research},
+  year    = {2017},
+  volume  = {18},
+  number  = {26},
+  pages   = {1-5},
+  url     = {http://jmlr.org/papers/v18/16-300.html}
 }
-@INBOOK{6284837,
-  author={Kurniawati, Hanna and Hsu, David and Lee, Wee Sun},
-  booktitle={Robotics: Science and Systems IV}, 
-  title={SARSOP: Efficient Point-Based POMDP Planning by Approximating Optimally Reachable Belief Spaces}, 
+
+@inproceedings{Kurniawati-RSS08,
+AUTHOR    = {Hanna Kurniawati, David Hsu, Wee Sun Lee},
+TITLE     = {SARSOP: Efficient Point-Based POMDP Planning by Approximating Optimally Reachable Belief Spaces},
+BOOKTITLE = {Proceedings of Robotics: Science and Systems IV},
+YEAR      = {2008},
+ADDRESS   = {Zurich, Switzerland},
+MONTH     = {June}
+}
+
+@inproceedings{Ong2009POMDPsFR,
+  title={POMDPs for robotic tasks with mixed observability},
+  author={Sylvie C. W. Ong and Shao Wei Png and David Hsu and Wee Sun Lee},
+  booktitle={Robotics: Science and Systems},
   year={2009},
-  volume={},
-  number={},
-  pages={65-72},
-  keywords={},
-  doi={}}
+  url={https://api.semanticscholar.org/CorpusID:2829896}
+}
+
+@misc{RockSample,
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/JuliaPOMDP/RockSample.jl}},
+}
+
+@article{opsurvey,
+author = {Vansteenwegen, Pieter and Souffriau, Wouter},
+year = {2011},
+month = {02},
+pages = {1-10},
+title = {The orienteering problem: A survey},
+volume = {209},
+journal = {European Journal of Operational Research},
+doi = {10.1016/j.ejor.2010.03.045}
+}
+
+@article{humanop,
+    doi = {10.1371/journal.pone.0280435},
+    author = {Waddington, Emma E. AND Heisz, Jennifer J.},
+    journal = {PLOS ONE},
+    publisher = {Public Library of Science},
+    title = {Orienteering experts report more proficient spatial processing and memory across adulthood},
+    year = {2023},
+    month = {01},
+    volume = {18},
+    url = {https://doi.org/10.1371/journal.pone.0280435},
+    pages = {1-14}
+}
